--- a/sobremi.html
+++ b/sobremi.html
@@ -29,7 +29,7 @@
     </main>
     <footer>
         <p>
-                <a href="https://www.facebook.com/marina.verzini/" target= "_bank"><i class="fa-brands fa-facebook-f"></i></a>
+                <a href="https://www.facebook.com/marina.verzini/" target= "_bank"><i class="fab fa-facebook-f"></i></a>
                 <a href="https://www.instagram.com/marizuritaverzini/" target= "_bank"><i class="fa-brands fa-instagram"></i></a>
                 <a href="https://github.com/marinazv" target="_bank"><i class="fa-brands fa-github"></i></a>
             
