Iconos redes sociales visibles

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
     </main>
     <footer>
         <p>
-                <a href="https://www.facebook.com/marina.verzini/" target= "_bank"><i class="fa fa-facebook-f"></i></a>
-                <a href="https://www.instagram.com/marizuritaverzini/" target= "_bank"><i class="fa fa-instagram"></i></a>
-                <a href="https://github.com/marinazv" target="_bank"><i class="fa fa-github"></i></a>
+                <a href="https://www.facebook.com/marina.verzini/" target= "_bank"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://www.instagram.com/marizuritaverzini/" target= "_bank"><i class="fab fa-instagram"></i></a>
+                <a href="https://github.com/marinazv" target="_bank"><i class="fab fa-github"></i></a>
             
             <span>Visita Mis redes sociales</span>
         </p>
